// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App if given Modal props , has a Modalcomponent 1`] = `
<div
  className="App"
>
  <withRouter(Header)
    Title="No Title"
    userId="donggri"
  />
  <Main />
  <Connect(Modal) />
</div>
`;

exports[`App matches snapshot 1`] = `
<div
  className="App"
>
  <withRouter(Header)
    Title="No Title"
    userId="donggri"
  />
  <Main />
</div>
`;
